# ros-alphabot2

./: README.md
alphabot2/: notes.txt  package.xml  setup.cfg  setup.py
alphabot2-diffdrive/: CMakeLists.txt  package.xml  robot_hardware.xml
alphabot2-diffdrive/include/alphabot2-diffdrive/: alphabot2_diffdrive.hpp
alphabot2-diffdrive/pwm/: pwm-gpio-dual.dts
alphabot2-diffdrive/src/: alphabot2_diffdrive.cpp
alphabot2-gazebo/: package.xml  setup.cfg  setup.py
alphabot2-gazebo/alphabot2-gazebo/: test_node.py
alphabot2-gazebo/launch/: alphabot2-gazebo.py  mapper_params_online_async.yaml  nav2_params.yaml
alphabot2-gazebo/sdf/: simulacia.sdf
alphabot2-gazebo/sdf/alphabot2/: alphabot2.sdf
alphabot2-gazebo/sdf/stena/: model.config  stena.sdf
alphabot2/alphabot2/: alphabot2_node.py
alphabot2/config/: gamepad.yaml  kancel_map.pgm  kancel_map.yaml  mapper_params.yaml  nav2_params.yaml  robot_controller.yaml
alphabot2/controllers/: robot_controller.yaml
alphabot2/joystick/: gamepad.yaml
alphabot2/launch/: alphabot2-all.py  alphabot2-control.py  alphabot2-joy-lidar-slam.py  alphabot2-joy-lidar.py  alphabot2-joy.py  alphabot2-lidar.py  alphabot2-nav.py  alphabot2-nav2.py  alphabot2-slam.py  alphabot2.py
alphabot2/maps/: kancel_map-big.pgm  kancel_map-big.yaml  kancel_map-lores.yaml  kancel_map.pgm  kancel_map.yaml
alphabot2/rviz/: alphabot.rviz
alphabot2/sdf/alphabot2/: alphabot2.sdf  model.config
